[package]
name = "sentireader_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
crc = "3.0.0"
nalgebra = {version ="0.32", features = ["serde-serialize"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
rmp-serde = "1.1.1"
serde_yaml = "0.9"
coning_and_sculling = {path = "coning_and_sculling" }
