[package]
name = "sentireader_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.5"
crc = "3.2"
nalgebra = {version ="0.33", features = ["serde-serialize"]}
tokio = { version = "1.39", features = ["full"] }
serde = {version = "1.0.208", features = ["derive"]}
rmp-serde = "1.3"
serde_yaml = "0.9.34+deprecated"
coning_and_sculling = {path = "coning_and_sculling", optional = true }
anyhow = "1.0.86"


[features]
coning_and_sculling = ["dep:coning_and_sculling"]

[[bin]]
name = "senti_reader_cs"
required-features = ["coning_and_sculling"]

[[bin]]
name = "senti_reader"
